The floor names the line and the recipe, not one patch release
Two 21-to-25 bumps in one sweep differed only in where they started, and that
decided whether either was worth anything.

26B-CSE438/order-service began at Boot 3.2.0, below the floor, so after-pins
fired. Its doer reached for UpgradeSpringBoot_3_5, the recipe resolved the
newest patch by itself and landed on 3.5.16, tomcat-embed-core went from
10.1.16 with 19 CVEs to a release carrying none, and the bump finished at
63 CRITICAL+HIGH to 2 with 163 tests conserved.

2819461143wp/software2_B was already sitting on 3.5.4, which was exactly what
the floor named. after-pins answered NOTHING-OUTSTANDING, correctly, and the
project kept tomcat-embed-core 10.1.43 and its eleven CVEs. 24 to 24, effective
target 25, 5 tests conserved: a PASS that moved nothing. Its own security-after
agent called the result an artefact, and it was right.

3.5.4 is twelve patch releases behind the head of its own line, and the patch
releases are where the CVE fixes are. Worse, a project below the floor got
whichever treatment its doer improvised: odsoft and 0xiaoyu/XiaoYu both had
UpgradeParentVersion write the literal 3.5.4, so two of the three Spring bumps
in that sweep landed on the stale patch as well.

So the floor names the recipe rather than a number to copy, and says in prose
that an earlier 3.5 patch has not met it. apply_recipe carries the same point
where the doer reads it, with the measurement behind it.

WHAT ELSE IS IN HERE, all of it uncommitted until now.

The chain is triads. Every stage is planner, doer, verifier, and the verifier
holds the loop and answers done, again or replan. Chain.java declares the order
once and a test binds it to Agents.definitions().

Declared replaces the pin check. It reports raw facts, parent blocks, versions
that arrive through a property, versionless dependencies as managed elsewhere,
Gradle strings and plugins, and the planner does the judging. Nothing parses
the floors any more: a r